--- a/core/templates/admin_base.html
+++ b/core/templates/admin_base.html
@@ -85,10 +85,15 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light bg-dark" href="#" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle text-light bg-dark" href="#" id="transactionDropdown" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-truck mr-3 text-primary fa-fw"></i> Check Transactions
             </a>
-            
+            <div class="dropdown-menu" aria-labelledby="transactionDropdown">
+                <a class="dropdown-item" href="{% url 'check_transaction' %}">Check by ID</a>
+                <a class="dropdown-item" href="{% url 'check_all_transactions' %}">View All</a>
+                <a class="dropdown-item" href="{% url 'check_daily_transactions' %}">Daily Transactions</a>
+            </div>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-light bg-dark" href="#" data-toggle="dropdown">
