Pending Logic Added

--- a/core/templates/checkout.html
+++ b/core/templates/checkout.html
@@ -51,6 +51,7 @@
             <input type="hidden" name="items" id="items">
 
             <button type="submit" class="btn btn-success px-4 mt-3">Checkout & Generate PDF</button>
+            <button type="submit" name="pending" class="btn btn-warning px-4 mt-3">Save as Pending</button>
         </form>
     </div>
 </div>
