--- a/core/templates/admin_base.html
+++ b/core/templates/admin_base.html
@@ -95,12 +95,10 @@
                 <a class="dropdown-item" href="{% url 'check_daily_transactions' %}">Daily Transactions</a>
             </div>
         </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light bg-dark" href="#" data-toggle="dropdown">
+        <li class="nav-item">
+            <a class="nav-link text-light bg-dark" href="{% url 'pending_sales' %}">
                 <i class="fas fa-prescription-bottle-alt mr-3 text-primary fa-fw"></i> Pending Orders
             </a>
-           
-
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link text-light bg-dark">
